--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint frontend"
   },
   "dependencies": {
+    "@mantine/core": "^7.16.2",
+    "@mantine/hooks": "^7.16.2",
     "@tailwindcss/postcss": "^4.0.3",
     "next": "15.1.6",
     "postcss": "^8.5.1",
