--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "build": "next build frontend",
     "start": "next start frontend",
     "lint": "next lint --fix frontend",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "tsp.compile": "tsp compile ./doc/api/tsp/main.tsp"
   },
   "dependencies": {
     "@mantine/core": "^7.16.2",
     "@mantine/hooks": "^7.16.2",
     "@tailwindcss/postcss": "^4.0.3",
+    "@typespec/http": "^0.64.0",
+    "@typespec/openapi3": "^0.64.0",
+    "@typespec/rest": "^0.64.1",
     "next": "15.1.6",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
@@ -24,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typespec/compiler": "^0.64.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "eslint-config-prettier": "^10.0.1",
