--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start frontend",
     "lint": "next lint --fix frontend",
     "format": "prettier --write .",
-    "tsp.compile": "tsp compile ./doc/api/tsp/main.tsp"
+    "tsp.compile": "tsp compile ./doc/api/tsp/main.tsp",
+    "orval.build": "orval --config ./orval.config.ts"
   },
   "dependencies": {
     "@mantine/core": "^7.16.2",
@@ -17,10 +18,12 @@
     "@typespec/http": "^0.64.0",
     "@typespec/openapi3": "^0.64.0",
     "@typespec/rest": "^0.64.1",
+    "axios": "^1.7.9",
     "next": "15.1.6",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swr": "^2.3.2",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
@@ -32,6 +35,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "eslint-config-prettier": "^10.0.1",
+    "orval": "^7.5.0",
     "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "typescript": "^5"
