--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - '6379:6379'
     volumes:
       - ./redis:/data
+    command: ['redis-server', '--requirepass', 'password']
 
 volumes:
   mysql:
